--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Alfa Slab One', cursive;
+  font-family: 'Asset', cursive;
+  font-family: 'Averia Serif Libre', cursive;
+  font-family: 'IBM Plex Mono', monospace;
+  font-family: 'Jacques Francois Shadow', cursive;
+  font-family: 'Merriweather', serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Rye', cursive;
 }
