--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -83,12 +83,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .about_me .about-content .right-wrapper img {
     width: 472px;
     height: 365px;
     margin-left: -61px;
+    border-radius: 5px;
 }
 
 
