--- a/src/pages/Portfoliopage.css
+++ b/src/pages/Portfoliopage.css
@@ -101,7 +101,7 @@
         margin-left: 175px;
     }
     .portfoliopage .projects-details{
-        justify-content: left;
+        justify-content: center;
     }
 }
 
@@ -120,6 +120,6 @@
         margin-left: 230px;
     }
     .portfoliopage .projects-details{
-        justify-content: left;
+        justify-content: center;
     }
 }
